--- a/templates/index.html
+++ b/templates/index.html
@@ -6,5 +6,9 @@
 </head>
 <body>
     <h1>Cadastro de Clientes</h1>
+    <hr>
+    <a href="{{ url_for('cadastrar')}}">Cadastrar Cliente</a>
+    <br>
+    <a href="{{ url_for('lista')}}">Lista de Clientes</a>
 </body>
 </html>
