Inclusão de botão atualizar na lista e implantada funcionabilidade atualizar cadastro.

--- a/templates/lista.html
+++ b/templates/lista.html
@@ -15,6 +15,7 @@
             <td>CPF</td>
             <td>E-mail</td>
             <td>Excluir</td>
+            <td>Atualizar</td>
         </tr>
         {% for pessoa in pessoas %}
         <tr>
@@ -23,7 +24,8 @@
             <td>{{ pessoa.telefone }}</td>
             <td>{{ pessoa.cpf }}</td>
             <td>{{ pessoa.email }}</td>
-            <td><a href="/excluir/{{ pessoa._id }}">X</a></td>
+            <td><a href="/excluir/{{ pessoa._id }}"><input type="submit" value="Excluir"></a></td>
+            <td><a href="/atualizar/{{ pessoa._id }}"><input type="submit" value="Atualizar"></a></td>
         </tr>
         {% endfor %}
     </table><br>
